--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,10 @@ apply plugin: 'kotlin-android'
 
 apply plugin: 'kotlin-android-extensions'
 
-apply from: '../app/src/main/java/com/example/final_project/Detekt/detekt.gradle'
-
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.final_project"
+        applicationId "com.a4nt0n64r.PUBGStats"
         minSdkVersion 21
         targetSdkVersion 28
         versionCode 1
@@ -29,25 +27,33 @@ apply plugin: 'kotlin-kapt'
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-    implementation 'androidx.appcompat:appcompat:1.1.0-alpha02'
-    implementation 'com.jjoe64:graphview:4.2.2'
-    implementation 'androidx.core:core-ktx:1.1.0-alpha04'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation 'androidx.appcompat:appcompat:1.1.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
-    testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
+//    testImplementation 'junit:junit:4.12'
+
+    //design
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.android.support:design:28.0.0'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+
+    //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.5.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
     implementation 'com.squareup.okhttp3:logging-interceptor:3.9.0'
+
+    //adapter with delrgates
     implementation 'com.hannesdorfmann:adapterdelegates4:4.0.0'
+
+    //graphs
     implementation 'com.jjoe64:graphview:4.2.2'
-    implementation 'com.android.support:design:28.0.0'
+
+    //room
     implementation "android.arch.persistence.room:runtime:1.1.1"
     kapt "android.arch.persistence.room:compiler:2.1.1"
+
+    //coroutines
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.0.1'
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-android:1.0.1'
 }
